# RoFI

.doctrees/: environment.pickle  index.doctree
.doctrees/intro/: compiling.doctree
.doctrees/intro/suites/: desktop.doctree
.doctrees/rofihal/: index.doctree
.doctrees/rofilib/: configuration.doctree  index.doctree
.doctrees/rofilib/atoms/: containers.doctree  patterns.doctree  result.doctree
.doctrees/tutorials/: simulator.doctree
branch/basicbfs/: search.html
branch/basicbfs/intro/: compiling.html  testing.html
branch/configuration/: genindex.html  objects.inv  searchindex.js
branch/configuration/intro/: structure.html
branch/configuration/rofilib/: configuration.html
branch/configuration/tutorials/: simulator.html
branch/configuration/universalModule/: index.html
branch/configurationBug/intro/suites/: doc.html
branch/configurationBug/rofilib/atoms/: index.html
branch/halExposeLessHeaders/: index.html  objects.inv  searchindex.js
branch/halExposeLessHeaders/intro/: compiling.html
branch/halExposeLessHeaders/intro/suites/: desktop.html  doc.html
branch/halExposeLessHeaders/rofihal/: index.html
branch/halExposeLessHeaders/rofilib/: index.html
branch/halExposeLessHeaders/rofilib/atoms/: patterns.html  result.html
branch/hexapod/: genindex.html  search.html
branch/hexapod/intro/: compiling.html  structure.html  testing.html
branch/hexapod/intro/suites/: desktop.html  doc.html
branch/hexapod/rofilib/atoms/: containers.html  index.html  resources.html
branch/hexapod/rofisim/: index.html  rofihal.html
branch/master/roficom/: index.html
branch/master/rofilib/: index.html
branch/moveOldDataConfigurations/: genindex.html  index.html
branch/moveOldDataConfigurations/_sources/intro/: compiling.rst.txt
branch/moveOldDataConfigurations/intro/: compiling.html  index.html
branch/moveOldDataConfigurations/intro/suites/: desktop.html
branch/moveOldDataConfigurations/rofihal/: index.html
branch/moveOldDataConfigurations/rofilib/atoms/: containers.html  resources.html
branch/moveOldDataConfigurations/tutorials/: index.html
branch/newSnakeExperiments/: genindex.html  index.html
branch/newSnakeExperiments/intro/: compiling.html  index.html  structure.html
branch/newSnakeExperiments/intro/suites/: desktop.html
branch/newSnakeExperiments/roficom/: index.html
branch/newSnakeExperiments/rofilib/: configuration.html  index.html
branch/newSnakeExperiments/rofilib/atoms/: containers.html  patterns.html
branch/newSnakeExperiments/universalModule/: index.html
branch/stm32/: genindex.html  search.html  searchindex.js
branch/stm32/intro/: compiling.html  index.html  structure.html  testing.html
branch/stm32/roficom/: index.html
branch/stm32/rofihal/: index.html
branch/stm32/rofilib/: configuration.html
branch/stm32/rofilib/atoms/: containers.html  index.html  resources.html
branch/stm32/universalModule/: index.html
examples/hal/connectorHalStatus/: main.cpp
hardwareModules/RoFICoM/hardware/control_board/: .mxproject  STM32G071GBUx_FLASH.ld  cube.ioc
hardwareModules/RoFICoM/hardware/control_board/Inc/: main.h  stm32g0xx_hal_conf.h
hardwareModules/RoFICoM/hardware/control_board/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
hardwareModules/RoFICoM/software/control_board/: CMakeLists.txt
hardwareModules/RoFICoM/software/control_board/src/: bsp.cpp  bsp.hpp  configuration.hpp  connInterface.hpp  main.cpp  motor.hpp  stm32cxx.config.hpp
hardwareModules/RoFICoM/software/control_board/vl53l1_lidar/: CMakeLists.txt  lidar.cpp  lidar.hpp
hardwareModules/RoFICoM/software/control_board/vl53l1_lidar/platform/: vl53l1_platform.cpp  vl53l1_platform2.cpp.bk
hardwareModules/RoFICoM/software/i2c_test/: CMakeLists.txt
hardwareModules/RoFICoM/software/i2c_test/src/: VL53L1X_ULP_api.c  VL53L1X_ULP_api.h  VL53L1X_ULP_platform.c  VL53L1X_ULP_platform.h  VL53L1X_api.h  bsp.cpp  bsp.hpp  main.cpp  vl53l1_platform.c  vl53l1_types.h
hardwareModules/RoFICoM/software/i2c_test/vl53l1_lidar/: CMakeLists.txt  lidar.hpp
hardwareModules/RoFICoM/software/i2c_test/vl53l1_lidar/core/inc/: stm32xxx_hal.h
hardwareModules/RoFICoM/software/i2c_test/vl53l1_lidar/platform/src/: vl53l1_platform.c  vl53l1_platform.c.bk  vl53l1_platform.cpp
rofilib/: configuration.html
rofilib/atoms/: patterns.html  result.html
softwareComponents/configuration/include/configuration/: rofiworld.hpp  universalModule.hpp
softwareComponents/configuration/json_include/configuration/: serialization.hpp
softwareComponents/configuration/src/: rofiworld.cpp
softwareComponents/configuration/test/: rofibot.cpp  serialization.cpp
softwareComponents/isoreconfig/: BFS.h  BFSReporter.cpp  CMakeLists.txt  bfs.cpp  isomorphic.cpp  isomorphic.hpp  main.cpp  result.in  start.in  target.in  testing.sh
softwareComponents/isoreconfig/include/isoreconfig/: BFS.hpp  isomorphic.hpp
softwareComponents/isoreconfig/src/: bfs.cpp  isomorphic.cpp
softwareComponents/lwip++/include/: networking.hpp
softwareComponents/rofiHalEsp32/: CMakeLists.txt
softwareComponents/rofiHalEsp32/src/: rofi_hal.cpp
softwareComponents/rofiHalInc/include/: rofi_hal.hpp
softwareComponents/simplesimLib/src/: module_states.cpp
softwareComponents/stm32cxx/: CMakeLists.txt
softwareComponents/stm32cxx/port/stm32g0xx/: gpio.port.hpp
softwareComponents/stm32cxx/src/drivers/: gpio.hpp  i2c.cpp  i2c.hpp  timer.hpp
suites/desktop/: CMakeLists.txt
suites/stm32/: CMakeLists.txt
tools/rofiTool/: CMakeLists.txt  build.cpp  points.cpp  rendering.cpp  rendering.hpp
tools/simplesim/: main.cpp
tools/simplesimServer/: main.cpp
(+3 files in other folders)
